fix unwanted overflow

--- a/src/ui/client/input.css
+++ b/src/ui/client/input.css
@@ -22,7 +22,7 @@
 
 /* DASHBOARD LAYOUT */
 body {
-  @apply bg-primary h-full w-full overflow-x-hidden;
+  @apply bg-primary h-full w-full overflow-x-hidden dark:overflow-x-hidden;
 }
 
 .no-script {
@@ -30,7 +30,7 @@ body {
 }
 
 .content-container {
-  @apply z-10 absolute xl:pl-75 w-full px-2 sm:px-6 pb-0 pt-20 sm:pt-3 min-h-screen flex flex-col justify-between;
+  @apply z-10 absolute xl:pl-75 w-full px-2 sm:px-6 pb-0 pt-20 sm:pt-3 min-h-screen flex flex-col justify-between overflow-hidden;
 }
 
 .content-wrap {
@@ -253,7 +253,7 @@ body {
 /* MENU */
 
 .menu-float-btn {
-  @apply w-13 h-13 scale-90 sm:scale-100 dark:brightness-95 dark:hover:brightness-105 hover:brightness-75 xl:hidden fixed p-3 text-xl bg-white shadow-sm cursor-pointer top-2 sm:top-3 right-5 sm:right-6 z-990 rounded-circle text-slate-700;
+  @apply w-13 h-13 scale-90 sm:scale-100 dark:brightness-95 dark:hover:brightness-105 hover:brightness-75 xl:hidden fixed p-3 text-xl bg-white shadow cursor-pointer top-2 sm:top-3 right-5 sm:right-6 z-990 rounded-circle text-slate-700;
 }
 
 .menu-close-btn {
@@ -712,7 +712,7 @@ body {
 }
 
 .list-content-container {
-  @apply w-full grid grid-cols-12 rounded px-2 col-span-12 overflow-x-hidden overflow-y-visible;
+  @apply w-full grid grid-cols-12 rounded px-2 col-span-12 overflow-x-hidden overflow-y-auto;
 }
 
 .list-content-wrap {
