--- a/src/ui/client/public/style.css
+++ b/src/ui/client/public/style.css
@@ -1265,12 +1265,6 @@ h6 {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
 }
 
-.scale-\[1\.4\] {
-  --tw-scale-x: 1.4 !important;
-  --tw-scale-y: 1.4 !important;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
-}
-
 .scale-\[1\.3\] {
   --tw-scale-x: 1.3 !important;
   --tw-scale-y: 1.3 !important;
@@ -1584,6 +1578,10 @@ h6 {
   stroke: #6c757d !important;
 }
 
+.stroke-gray-700 {
+  stroke: #495057 !important;
+}
+
 .stroke-green-700 {
   stroke: #15803d !important;
 }
@@ -1622,22 +1620,6 @@ h6 {
 
 .stroke-yellow-600 {
   stroke: #ca8a04 !important;
-}
-
-.stroke-cyan-500 {
-  stroke: #11cdef !important;
-}
-
-.stroke-blue-900 {
-  stroke: #00007d !important;
-}
-
-.stroke-gray-900 {
-  stroke: #141727 !important;
-}
-
-.stroke-gray-700 {
-  stroke: #495057 !important;
 }
 
 .p-0 {
@@ -1979,6 +1961,10 @@ body {
   background-color: rgb(8 85 119 / var(--tw-bg-opacity));
 }
 
+:is(.dark body) {
+  overflow-x: hidden;
+}
+
 .no-script {
   position: relative;
   width: 100%;
@@ -1998,6 +1984,7 @@ body {
   width: 100%;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
   padding-bottom: 0px;
@@ -3135,8 +3122,8 @@ body {
   line-height: 1.75rem;
   --tw-text-opacity: 1;
   color: rgb(52 71 103 / var(--tw-text-opacity));
-  --tw-shadow: 0 .25rem .375rem -.0625rem hsla(0,0%,8%,.12),0 .125rem .25rem -.0625rem hsla(0,0%,8%,.07);
-  --tw-shadow-colored: 0 .25rem .375rem -.0625rem var(--tw-shadow-color), 0 .125rem .25rem -.0625rem var(--tw-shadow-color);
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -5625,8 +5612,8 @@ body {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(12, minmax(0, 1fr));
+  overflow-y: auto;
   overflow-x: hidden;
-  overflow-y: visible;
   border-radius: 0.25rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
